k8s/services/authentication-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-app
  template:
    metadata:
      labels:
        app: authentication-app
    spec:
      containers:
      - name: authentication-app
        image: moeshiba/authenticationapp-authentication_app
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-app
spec:
  selector:
    app: authentication-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8090
  type: LoadBalancer
