k8s/services/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authentication-service
  name: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  strategy: {}
  template:
    metadata:

      labels:
        app: authentication-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres-authentication:30001/authentication
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
            - name: SPRING_DATASOURCE_PASSWORD
              value: password
            - name: SPRING_DATA_REDIS_HOST
              value: authentication-redis
            - name: SPRING_DATA_REDIS_PORT
              value: "6379"
            - name: SPRING_RABBITMQ_HOST
              value: bestbuy-rabbitmq
            - name: SPRING_RABBITMQ_PORT
              value: "5681"
            - name: SPRING_RABBITMQ_USERNAME
              value: guest
            - name: SPRING_RABBITMQ_PASSWORD
              value: guest

          image: moeshiba/authenticationapp-authentication_app:latest
          name: authentication-service
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authentication-service
  name: authentication-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8090
  selector:
    app: authentication-service
status:
  loadBalancer: {}
