k8s/services/products-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-app
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
        - name: products-app
          image: moeshiba/productsapp-products_app
          ports:
            - containerPort: 9099
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-redis
  template:
    metadata:
      labels:
        app: products-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
apiVersion: v1
kind: Service
metadata:
  name: products-redis
spec:
  selector:
    app: products-redis
  ports:
    - protocol: TCP
      port: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: products-app
spec:
  selector:
    app: products-app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 9099
