k8s/services/reviews-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-app
  template:
    metadata:
      labels:
        app: reviews-app
    spec:
      containers:
        - name: reviews-app
          image: moeshiba/reviews-reviews_app
          ports:
            - containerPort: 9085
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-app
spec:
  # type: LoadBalancer
  selector:
    app: reviews-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
