k8s/services/transactions-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-app
  template:
    metadata:
      labels:
        app: transactions-app
    spec:
      containers:
        - name: transactions-app
          image: moeshiba/transactionapp-transactions_app
          ports:
            - containerPort: 8091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-redis
  template:
    metadata:
      labels:
        app: transactions-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: transactions-app
spec:
  type: LoadBalancer
  selector:
    app: transactions-app
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: transactions-redis
spec:
  selector:
    app: transactions-redis
  ports:
    - protocol: TCP
      port: 6384
      targetPort: 6379
