k8s/services/user-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: moeshiba/userapp-user_app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-app
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8080
